static/styles/styles.css
body {
    margin: 0;
    padding: 0;
    background: #121212;
}

.root {
    background: #121212;
    font-family: 'MuseoModerno', cursive !important;
    font-style: normal;
    min-height: 100vh;
}

a {
    text-decoration: none;
    color: #F2F2F2;
}

.view-body {
    width: 100vw;
    height: 100vh;
}

.center-group {
    display: flex;
    justify-content: center;
    align-items: center;
}

.min-space {
    width: fit-content;
    height: fit-content;
}

.welcome {
    font-family: 'Arial', serif;
    font-style: normal;
    font-size: 48px;
    line-height: 55px;
}

.brand-text {
    font-size: 32px;
    line-height: 51px;
}

.login-center-portion {
    width: fit-content;
    height: fit-content;
}

input[type='text'] {
    height: 50px;
    border-color: transparent;
    font-family: 'MuseoModerno', cursive;
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 32px;
    padding-left: 20px;
    border-radius: 20px;
    min-width: 100%;
    box-sizing: border-box;
}

input[type='password'] {
    height: 50px;
    border-color: transparent;
    font-family: 'MuseoModerno', cursive;
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 32px;
    padding-left: 20px;
    border-radius: 20px;
    min-width: 100%;
    box-sizing: border-box;
}

textarea {
    height: 50px;
    border-color: transparent;
    font-family: 'MuseoModerno', cursive;
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 32px;
    padding-left: 20px;
    border-radius: 20px;
    min-width: 100%;
    box-sizing: border-box;
    resize: none;
    width: 100%;
}

button[type='submit'] {
    font-family: 'MuseoModerno', cursive;
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 32px;
    border-radius: 20px;
    padding: 5px 20px;
    border: 0 transparent;
}

input::placeholder {
    color: #646464;
    opacity: 1;
    font-family: 'MuseoModerno', cursive;
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 32px;
}

.left-bar {
    position: fixed;
    height: 100vh;
    box-sizing: border-box;
    padding-right: 10px;
    z-index: 999;
}

.left-bar-elements {
    padding: 10px 50px 10px 10px;
    border-bottom-right-radius: 20px;
    border-top-right-radius: 20px;
}

.left-bar-logo {
    position: absolute;
    top: 10%;
    justify-content: center;
    display: flex;
}

.left-bar-except-root {
    width: 100%;
    margin-left: 150px;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.small-avatar {
    width: 50px;
    height: 50px;
}

.large-avatar {
    width: 125px;
    height: 125px;
}

.avatar {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 50%;
}

.fullname {
    font-family: 'Arial', serif;
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: 21px;
}

.username {
    font-family: 'Arial', serif;
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 18px;
}

button {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0 15px;
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 19px;
    border-radius: 20px;
    border-width: 0;
}

.post-caption {
    word-break: break-word;
}

.search-results {
    width: 100%;
    box-sizing: border-box;
    padding: 10px;
    gap: 10px;
}

#user-search-results {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 10px;
}

.bio {
    font-family: 'Arial', serif;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    display: flex;
    align-items: center;
    text-align: center;
}

.blank-page {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #F2F2F2;
}

.less-action-button-corner {
    width: 24px;
    height: 24px;
    position: absolute;
    top: 10px;
    right: 10px;
    cursor: pointer;
}

.location {
    font-weight: 400;
    font-size: 16px;
    display: flex;
    align-items: center;
    text-align: center;
    color: #949494;
}

.page-divider {
    display: flex;
    width: 100%;
    box-sizing: border-box;
}

.image-upload {
    position: relative;
    display: inline-block;
    cursor: pointer;
}

#image-preview {
    object-fit: contain;
    width: 100%;
}

#file-input {
    position: absolute;
    left: 0;
    top: 0;
    opacity: 0;
    width: 100%;
    height: 100%;
    cursor: pointer;
}


.comment-section {
}

.new-comment {
    position: absolute;
    bottom: 0;
}

.comment {
    padding-left: 10px;
    font-family: 'Arial', serif;
    font-style: italic;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;
    word-break: break-word;
}

.saved-posts-flex {
    display: flex;
    flex-wrap: wrap;
}

.post-image {
    width: 100%;
}

.settings-options {
    padding: 10px 0 10px 20px;
    background: #1C1C1C;
    color: #F2F2F2;
    font-family: 'MuseoModerno', serif;
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
    width: 100%;
    box-sizing: border-box;
    max-width: 400px;
}

.selected-settings {
    background: #F8E71C !important;
    color: #121212 !important;
}

.profile-picture {
    display: flex;
    align-items: center;
}

.profile-picture img {
    width: 100px;
    height: 100px;
    object-fit: cover;
    border-radius: 50%;
    margin-right: 10px;
}

.profile-picture input[type="file"] {
    display: none;
}

.profile-picture label {
    color: #fff;
    padding: 10px;
    border-radius: 5px;
    cursor: pointer;
}

.error-message {
    font-family: 'MuseoModerno', cursive;
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
    color: #FF4136;
    width: 100%;
}

.error-message-each {
    display: flex;
    width: 100%;
    justify-content: center;
}

.success-message {
    color: #13a804;
    padding: 10px;
}

.users-list {
    display: grid;
    gap: 10px;
}

.admin-data-title {
    font-family: 'MuseoModerno', serif;
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
    line-height: 25px;
}

.admin-data-content {
    font-family: 'MuseoModerno', serif;
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 25px;
    display: flex;
    align-items: center;
    word-break: break-word;
}

.notification-head {
    font-weight: 700;
}

.notification-time {
    color: #7b7b7b;
    font-weight: 300;
}

.follow-button {
    height: fit-content;
    padding: 10px;
}

.request-button {
    height: fit-content;
    padding: 10px;
}

.admin-posts {
    cursor: pointer;
}

.chat-root {
    height: calc(100vh - 60px);
    padding-left: 10px;
    box-sizing: border-box;
}


#chat-search-box input {
    width: auto;
    min-width: auto;
}

.chat-users-list {
    max-height: calc(100vh - 120px);
    overflow-y: auto;
}

.chat-users-list::-webkit-scrollbar {
    width: 10px;
}

.msg-img {
    width: 50px;
    height: 50px;
    margin-right: 10px;
    background: #ddd no-repeat center;
    background-size: cover;
    border-radius: 50%;
}

.msg-bubble {
    max-width: 450px;
    padding: 15px;
    border-radius: 15px;
    word-break: break-word;
}

.msg-info {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 10px;
}

.msg-info-name {
    margin-right: 10px;
    font-weight: bold;
}

.msg-info-time {
    font-size: 0.85em;
}

.msg:last-of-type {
    margin: 0;
}

.msg {
    display: flex;
    align-items: flex-end;
    margin-bottom: 10px;
}

.left-msg .msg-bubble {
    border-bottom-left-radius: 0;
}

.right-msg {
    flex-direction: row-reverse;
}

.right-msg .msg-bubble {
    color: #fff;
    border-bottom-right-radius: 0;
}

.right-msg .msg-img {
    margin: 0 0 0 10px;
}

.msg-input-area {
    width: auto;
    bottom: 0;
}

.msg-input-area input {
    width: 100%;
    min-width: auto;
}

.chat-msg-section {
    height: calc(100vh - 240px);
    overflow-y: auto;
    width: 100%;
}

.chat-msg-section::-webkit-scrollbar {
    width: 10px;
}

.chat-button {
    z-index: 1000;
    border-radius: 50%;
    background-color: #4C4CFF;
    right: 30px;
    bottom: 30px;
}

.msgs-section {
    height: calc(100vh - 100px);
}

.chat-root {
    padding-left: 0;
}

.badge {
    border-radius: 50%;
    width: 10px;
    display: none;
    height: 10px;
    align-items: center;
    color: #3f3f3f;
    font-weight: bold;
}

.showing-badge {
    display: flex;
}

.menu-bar {
    right: 100%;
    top: 100%;
    border-radius: 5px !important;
    display: none;
    cursor: pointer;
    min-width: 100px;
}

.menu-active {
    display: flex;
    flex-direction: column;
}

.menu-bar ul {
    width: max-content;
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.danger-btn {
    font-weight: bold;
    color: #F2F2F2 !important;
    padding: 10px;
    height: min-content;
    background-color: #FF0000 !important;
}

.tag {
    color: #0000FF;
}

